<resources>
    <string name="app_name">Tamusni N Teqvaylit</string>
    <string name="inscription">Jerred (inscription)</string>
    <string name="Mas">Amalay</string>
    <string name="Fim">Unti</string>
    <string name="name">Nqema</string>
    <string name="namee">Nqema : </string>
    <string name="MDp">Awal_Ufir</string>
    <string name="btn3">Taqvaylith</string>
    <string name="btn2">tarumith</string>
    <string name="Textekb">taqvaylith</string>
    <string name="btn">Eggez.</string>
    <string name="btn1">Semllal</string>
    <string name="im">imageview</string>
    <string name="continuer">Asul</string>
    <string name="Prenom">Isem-ik(im)</string>
    <string name="Prenomm">Isem : </string>
    <string name="login">Qqen (connecter)</string>
    <string name="email">Tirwat@Email.com</string>
    <string name="Email">Tirwat</string>
    <string name="Centre_Btn1">Tamusni 📖</string>
    <string name="Centre_Btn2">Amawal 📙</string>
    <string name="Centre_Btn3">Urar 🎮</string>
    <string name="Centre_Btn4">Timucuha📜</string>
    <string name="centre_Btn5">Tiwlafin 📸</string>
    <string name="centre_Btn6">Isefra 🖋</string>
    <string name="information">Talɣut</string>
    <string name="aide">Tallalt</string>
    <string name="em">suppot@tamusninteqvaylit.online</string>
    <string name="Paramètre">Amsektay neɣ aɣewwar</string>
    <string name="aw">Aru Awal-ik (im) dagi.</string>
    <string name="sw">Siwdhed</string>
    <string name="mode_nuit">Askar n yiḍ</string>
    <string name="aidez_lapplication">sellek asnas alel</string>
    <string name="nous_contacter">Ssiwel-aneɣ-d </string>
    <string name="Retour">Tuɣalin</string>
    <string name="envoyer_nous_un_messge">Azen-aɣ-d izen</string>
    <string name="Ta">Tarwa Nda Lounes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="server_back4">https://parseapi.back4app.com/</string>
    <string name="appid_back4">i8UFZ0YUgguPWizGQiHM8TzGN1gn6T81rSLkAQpt</string>
    <string name="key_back4">ftJVpI0xOaN6V7SKGhqZuUnAeQSYJbeFuzuphRCX</string>
    <string name="menu_home">Profil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Ssiwel-aneɣ-d</string>
    <string name="title_activity_dwar">Dwar</string>
    <string name="Acrcheologie">TasenZikt</string>
    <string name="animaux">Iɣersiwen</string>
    <string name="Azeta">Azeta</string>
    <string name="astronomy">Rryac</string>
    <string name="calendrier">Tafada</string>
    <string name="chiffre">Azwil</string>
    <string name="Ecriture">Tira</string>
    <string name="geographie">Amrakal</string>
    <string name="Histoirs">Amezruy</string>
    <string name="maison">Tazeqa</string>
    <string name="linguistique">Tasnilest</string>
    <string name="potterie">Ideqqi</string>
    <string name="awalik">
       Awal-ik
    </string>
    <string name="S">kenned ɣef "'Suqqel'"</string>
    <string name="Jeu_de_questions">Urar N Tuttriwin</string>
    <string name="Jeu_de_questions_photo">Tuttriwin N Tiwelfin </string>
    <string name="finir_les_phrases_suivante">TIMSAƐRAQ</string>
    <string name="gauche">☜</string>
    <string name="droite">☞</string>
    <string name="simuh">
     Si Muḥ U Mḥend 👉
    </string>
    <string name="mtb">
    Lwennas Meɛṭub 👉
    </string>
    <string name="cix">
    Ccix Muḥend U Lḥusin 👉
    </string>
    <string name="hadja">
        hadja yamina 👉
    </string>
    <string name="samir">
        Samir Mukrani 👉
    </string>
    <string name="aith">
    Aït Menguellet 👉
    </string>
    <string name="Tamurt">Tamurt</string>
    <string name="Tizi">

Tizi Wezzu

    </string>
    <string name="Bejaia">
Bgayet
    </string>
    <string name="Bouira">
Tubiret
    </string>
    <string name="Boumerdes">
Bumerdas
    </string>
    <string name="Jijel">
Ğiğel
    </string>
    <string name="Borj">
Burğ Bu3rarij

    </string>
    <string name="Setif">
Setif
    </string>
    <string name="tiw">Tawizet n Tnach</string>
    <string name="sur">Sur n vujehli</string>
    <string name="ty">Taryel</string>
    <string name="tw">Tawkilt</string>
    <string name="aww">Awaɣezniw</string>
    <string name="l_ula_d_seb_a_n_tulas">Lɣula d sebɛa n tulas</string>
    <string name="ah_eddad_n_lqalus">Aḥeddad n Lqalus</string>
    <string name="agellid_afer_as">Agellid aferḍas</string>
    <string name="tamacahut_n_tgelda">Tamacahut n tgelda</string>
    <string name="muqqel_uqqin_n_uze_a_nwen_ma_ur_tes_im_ara_internet_ad_tes_um_ugur_deg_kra_n_twuriwin_n_usrussu_ya">muqqel uqqin n uzeṭṭa-nwen ma ur tesεim ara internet, ad tesεum ugur deg kra n twuriwin n usrussu-ya.</string>
    <string name="ugur_n_uze_a">Ugur n uzeṭṭa</string>
    <string name="errsym">⛔</string>
    <string name="tu_alin">Tuɣalin</string>
    <string name="tarwa_nda_lounes">Tarwa Nda Lounes©</string>
    <string name="tamusni_nteqvaylit">Tamusni NTeqvaylit®</string>
    <string name="signe">🔼🔼🔼🔼🔼🔼🔼🔼🔼🔼🔼🔼🔼</string>
    <string name="signebat">🔽🔽🔽🔽🔽🔽🔽🔽🔽🔽🔽🔽🔽</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="tigedrin">Tigedrin</string>
    <string name="i_ersiwen_n_illel">Iɣersiwen n illel</string>
    <string name="i_ersiwen_n_tiniri">Iɣersiwen n Tiniri</string>
    <string name="i_ersiwen_n_temda">Iɣersiwen n Temda</string>
    <string name="i_ersiwen_i_yettfefiren">Iɣersiwen I Yettfefiren</string>
    <string name="i_ersiwen_n_te_gi">Iɣersiwen n Teẓgi</string>
    <string name="todoo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="ssider">Ssider 📲</string>
    <string name="todo8">TODO</string>
    <string name="internet_zayet1">Internet Zayet...</string>
    <string name="asenser">Asenser</string>
    <string name="boutique_kabyle">Boutique Kabyle</string>
    <string name="ami_an">amiḏ̣an</string>
    <string name="chats">chats</string>
    <string name="ta_jeb_awen">Taɛjeb-awen ?</string>
    <string name="tarwa_nda_lsounes">Tarwa Nda Lounes 👥</string>
    <string name="menu">Menu</string>
    <string name="tbel">Tbel</string>
    <string name="awitay_n_tyirza_aqvayli">Awitay n tyirza Aqvayli</string>
    <string name="_12_yennyer_imensi_n_yennayer_01_wass">12 Yennyer : imensi n yennayer : 01 Wass.</string>
    <string name="_14_yennyer_u_an_imellalen_20_wussan">14 Yennyer : uḍan imellalen : 20 Wussan.</string>
    <string name="_03_furar_l_azla_03_wussan">03 Furar : lεazla : 03 Wussan.</string>
    <string name="_06_furar_imir_an_07_wussan">06 Furar : imirγan : 07 Wussan.</string>
    <string name="_13_furar_amer_il_01_wass">13 Furar : amerḍil : 01 Wass.</string>
    <string name="_14_furar_ime_nan_07_wussan">14 Furar : imeγnan : 07 Wussan.</string>
    <string name="_21_furar_i_azriyen_07_wussan">21 Furar : iεazriyen : 07 Wussan.</string>
    <string name="_28_furar_imensi_n_tefsuyt">28 Furar : imensi n tefsuyt.</string>
    <string name="_28_furar_tizewwa_in_10_wussan">28 Furar : tizewwaγin : 10 Wussan.</string>
    <string name="_10_ma_res_tim_arin_07_wussan">10 Maɣres : timγarin : 07 Wussan.</string>
    <string name="_17_ma_res_lejware_07_wussan">17 Maɣres : lejwareḥ : 07 Wussan.</string>
    <string name="_23_ma_res_sswale_07_wussan">23 Maɣres : sswaleḥ : 07 Wussan.</string>
    <string name="_31_ma_res_im_eznen_07_wussan">31 Maɣres : imḥeznen : 07 Wussan.</string>
    <string name="_07_yebrir_a_eyyan_14_wussan">07 Yebrir : aḥeggan : 14 Wussan.</string>
    <string name="_21_yebrir_tif_irin_07_wussan">21 Yebrir : tifḍirin : 07 Wussan.</string>
    <string name="_03_mayyu_nnisan_14_wussan">03 Mayyu : nnisan : 14 Wussan.</string>
    <string name="_17_mayyu_izegzawen_07_wussan">17 Mayyu : izegzawen : 07 Wussan.</string>
    <string name="_24_mayyu_iwra_en_07_wussan">24 Mayyu : iwraγen : 07 Wussan.</string>
    <string name="_30_mayyu_anebdu">30 Mayyu anebdu.</string>
    <string name="_31_mayyu_imehllalen_07_wussan">31 Mayyu : imehllalen : 07 Wussan.</string>
    <string name="_07_yunyu_iquranen_07_wussan">07 Yunyu : iquranen : 07 Wussan.</string>
    <string name="_25_ember_u_an_iberkanen_20_wussan">25 ǧember : uḍan iberkanen : 20 Wussan.</string>
    <string name="_30_wamber_iqeccacen_n_lexrif_07_wussan">30 Wamber : iqeccacen n lexrif : 07 Wussan.</string>
    <string name="_29_wamber_tagrest">29 Wamber : tagrest.</string>
    <string name="_27_wamber_iqeccacen_n_tegrest_07_wussan">27 Wamber : iqeccacen n tegrest : 07 Wussan.</string>
    <string name="_30_tuber_le_lal_n_tyerza_07_wussan">30 Tuber : leḥlal n tyerza : 07 Wussan.</string>
    <string name="_30_uct_lexrif">30 ɣuct : lexrif.</string>
    <string name="_25_yulyu_ssmayem_40_wussan">25 Yulyu : ssmayem : 40 Wussan.</string>
    <string name="_07_yulyu_inssla_01_wass">07 Yulyu : εinssla : 01 Wass.</string>
    <string name="si_mu_end_u_m_end_n_at_maduc">Si Muḥend U Mḥend n At Ḥmaduc</string>
    <string name="ccix_mu_end_u_l_usin">Ccix Muḥend U Lḥusin</string>
    <string name="aza">ⵣⵣⵣⵣⵣⵣⵣⵣⵣⵣⵣⵣ</string>
    <string name="han_ed">Hanḍed</string>
    <string name="ussan_deg_durt">Ussan deg durt</string>
    <string name="ahil_deg_wass">Ahil Deg Wass</string>
    <string name="ayyur_deg_sugas">Ayyur Deg Sugas</string>
    <string name="agafa">Agafa</string>
    <string name="asamar">Asamar</string>
    <string name="tanila">Tanila</string>
    <string name="ti_iwanin_tinaragin">tiɣiwanin tinaragin</string>
    <string name="urar_tzemarin">Urar tzemarin 🎷</string>
    <string name="tbel_ath_abbes">tbel ath abbes 🥁</string>
    <string name="tbel_iwasifen">tbel iwasifen 🥁</string>
    <string name="afecku_i_yi_esiwen">Afecku i yiɣesiwen</string>
    <string name="afecku_n_tefella_t">Afecku n tefellaḥt</string>
    <string name="jdkk">jdkk</string>
    <string name="isa_luten">Isaɣluten</string>
    <string name="igema">Igemaḍ</string>
    <string name="tirra_n_ideqi">Tira N Ideqqi</string>
    <string name="tirra_n_ifri">Tira N Yefri</string>
    <string name="tirra_n_tahnayin">Tira N Teḥnayin</string>
    <string name="tirra_n_tecrad">Tira N Tecraḍ</string>
    <string name="tirra_n_uqalus">Tira N Uqalus</string>
    <string name="tirra_n_uzzeta">Tira N Uẓeṭṭa</string>
    <string name="abarnus">abarnus</string>
    <string name="izegza">Izegza</string>
    <string name="iguma">iguma</string>
    <string name="iferujya">iferujya</string>
    <string name="aje_ig">ajeǧǧig</string>
    <string name="aferdis">Aferdis</string>
    <string name="anaw">Anaw</string>
    <string name="tafeka">Tafeka</string>
    <string name="iba_ac">ibaɛac</string>
    <string name="tayuga">Tayuga</string>
    <string name="tayuga_n_yezgaren">Tayuga n yezgaren</string>
    <string name="ussan_n_imalas">Ussan n-imalas</string>
    <string name="taqendurt">Taqendurt</string>
    <string name="ad_isina">ad-isinaƔ</string>
    <string name="ejj_ami_an_inek_inem_yeldi">Ejj amiḍan-inek(inem) yeldi</string>
    <string name="_00_00">00:00</string>
    <string name="i_egalen">Iɛegalen</string>
    <string name="inzi_na">Inzi-naɣ</string>
    <string name="todo">TODO</string>
</resources>