<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tasentrit"
    android:background="@drawable/yyes">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/imglogo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo">

    </ImageView>
    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnigharr"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_rryuc"
            android:text="@string/afecku_i_yi_esiwen"
            android:textColor="#FDFDFD"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck">

        </Button>

        <Button
            android:id="@+id/btntafel"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_rryuc"
            android:text="@string/afecku_n_tefella_t"
            android:textColor="#FDFDFD"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck">

        </Button>
        <Button
            android:id="@+id/btnttayuga"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_rryuc"
            android:text="@string/tayuga_n_yezgaren"
            android:textColor="#FDFDFD"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck">

        </Button>
    </LinearLayout>
    <ImageView
        android:layout_alignParentBottom="true"
        android:background="@drawable/mikanik"
        android:layout_centerHorizontal="true"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:contentDescription="@string/jdkk">

    </ImageView>

</RelativeLayout>