<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plant"
    tools:context=".tigedrin">
<ImageView
    android:background="#6BFFFFFF"
    android:id="@+id/imglogo"
    android:layout_centerHorizontal="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="10dp"
    android:layout_width="100dp"
    android:layout_height="100dp">

</ImageView>
    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/cdrros"
            android:id="@+id/btn1"
            android:text="@string/aje_ig"
        android:layout_width="100dp"
        android:layout_height="40dp">
    </Button>
        <Button
            android:layout_marginTop="5dp"
            android:background="@drawable/cdrplant"
            android:id="@+id/btn2"
            android:text="@string/iferujya"
            android:layout_width="100dp"
            android:layout_height="40dp">
        </Button>
        <Button
            android:layout_marginTop="5dp"
            android:background="@drawable/cdrfruit"
            android:id="@+id/btn3"
            android:text="@string/iguma"
            android:layout_width="100dp"
            android:layout_height="40dp">
        </Button>
        <Button
            android:layout_marginTop="5dp"
            android:background="@drawable/cdrlegum"
            android:id="@+id/btn4"
            android:text="@string/izegza"
            android:layout_width="100dp"
            android:layout_height="40dp">
        </Button>
    </LinearLayout>
</RelativeLayout>