<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Urar"
    android:background="@drawable/gamefond">

<ImageView
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:layout_centerVertical="true"
    android:layout_marginStart="30dp"
    android:layout_marginLeft="30dp"
    android:id="@+id/imglogo"
    >

</ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp">

        <TextView
            android:text="@string/signebat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <Button
            android:id="@+id/quiz"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/et_bg"
            android:text="@string/Jeu_de_questions">

        </Button>
        <TextView
            android:text="@string/signe"
            android:layout_width="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:text="@string/signebat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <Button
            android:id="@+id/urar2"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/et_bg"
            android:text="@string/Jeu_de_questions_photo">

        </Button>
        <TextView
            android:layout_marginBottom="5dp"
            android:text="@string/signe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:text="@string/signebat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <Button
            android:id="@+id/urar3"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/et_bg"
            android:text="@string/finir_les_phrases_suivante">

        </Button>
        <TextView
            android:text="@string/signe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>

</RelativeLayout>